03-Conditions/03-cfn-conditions-fn-If.yml
AWSTemplateFormatVersion: 2010-09-09

Parameters: 
  MyKeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Select a Keypair

  EnvironmentName: 
    Description: Select an Environment
    Type: String
    Default: dev
    AllowedValues: 
      - dev
      - prod

Mappings:
  MyRegionMap:
    us-east-1:
      HVM64: ami-01bc990364452ab3e
    us-west-1:
      HVM64: ami-09ab9d570789dfdd4

  MyEnvironmentMap: 
    dev: 
      instanceType: t2.micro
    prod:
      instanceType: t2.small

Conditions: 
# Create Elastic IP when environament equals Prod
  CreateEIPforProd: !Equals [!Ref EnvironmentName, prod]
# Create Security Group when Environment equals Dev
  CreateDevSecurityGroup: !Equals [!Ref EnvironmentName, dev]
  CreateProdSecurityGroup: !Equals [!Ref EnvironmentName, prod]

Resources:
  MyVMInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !FindInMap
        - MyRegionMap
        - !Ref 'AWS::Region'
        - HVM64
      InstanceType: !FindInMap
        - MyEnvironmentMap
        - !Ref EnvironmentName
        - instanceType
      KeyName: !Ref MyKeyName
      # Attach Security Group (created based on condition used info from line 58 or 70) based on Env Types 
      SecurityGroups: !If [CreateDevSecurityGroup, [!Ref DevEnvSecurityGroup], [!Ref ProdEnvSecurityGroup]]

  MyProdEIP: 
    Type: AWS::EC2::EIP
    Condition: CreateEIPforProd
    Properties:
      InstanceId: !Ref MyVMInstance
  
  DevEnvSecurityGroup: 
    Type: AWS::EC2::SecurityGroup
    # When Dev is selected from line 32; then create Dev SG
    Condition: CreateDevSecurityGroup
    Properties: 
      GroupDescription: DevSG
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0

  ProdEnvSecurityGroup: 
    Type: AWS::EC2::SecurityGroup
    # When prod is selected from line 32; then create prod SG
    Condition: CreateProdSecurityGroup
    Properties: 
      GroupDescription: prodSG
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
