03-Conditions/06-cfn-conditions-fn-And.yml
AWSTemplateFormatVersion: 2010-09-09
# This template would assign keyname based on multiple conditions
# If AWS region is east-1 or west-1 and Environment is dev assign "keypair" else assign "keypair2
# Note: keypair is name of a Key Pair
Parameters: 
  EnvironmentName: 
    Description: Select an Environment
    Type: String
    Default: dev
    AllowedValues: 
      - dev
      - prod
      - qa
    ConstraintDescription: Environament Types Dev, Prod, and Qa

Mappings:
  MyRegionMap:
    us-east-1:
      HVM64: ami-01bc990364452ab3e
    us-west-1:
      HVM64: ami-09ab9d570789dfdd4

  MyEnvironmentMap: 
    dev: 
      instanceType: t2.micro
    prod:
      instanceType: t2.small
    qa:
      instanceType: t2.medium

Conditions: 
  CreateEIPforProd: !Equals [!Ref EnvironmentName, prod]
  CreateProdSecurityGroup: !Equals [!Ref EnvironmentName, prod]
  CreateDevSecurityGroup: !Not [{Condition: CreateProdSecurityGroup}]
  # If Region is us-east-1 or us-west-1 and environment is dev keypair (line 54)
  IfRegionsUseKeyName: !And [!Or [!Equals [!Ref 'AWS::Region', us-east-1], !Equals [!Ref 'AWS::Region', us-west-1]], !Equals [!Ref EnvironmentName, dev]]

Resources:
  MyVMInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !FindInMap
        - MyRegionMap
        - !Ref 'AWS::Region'
        - HVM64
      InstanceType: !FindInMap
        - MyEnvironmentMap
        - !Ref EnvironmentName
        - instanceType
      # if IfRegionsUseKeyName yeilds True (logic from line 37), then use keypair else use keypair2
      KeyName: !If [IfRegionsUseKeyName, keypair, keypair2]
      SecurityGroups: !If [CreateDevSecurityGroup, [!Ref DevEnvSecurityGroup], [!Ref ProdEnvSecurityGroup]]

  MyProdEIP: 
    Type: AWS::EC2::EIP
    Condition: CreateEIPforProd
    Properties:
      InstanceId: !Ref MyVMInstance
  
  DevEnvSecurityGroup: 
    Type: AWS::EC2::SecurityGroup
    Condition: CreateDevSecurityGroup
    Properties: 
      GroupDescription: DevSG
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0

  ProdEnvSecurityGroup: 
    Type: AWS::EC2::SecurityGroup
    Condition: CreateProdSecurityGroup
    Properties: 
      GroupDescription: prodSG
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
